# pyiiko

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  pip-selfcheck.json  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: ci.yml
Pyiiko/: __init__.py  _base.py  _server_nomenclature.py  _web_docs.py  biz.py  card5.py  data.py  exceptions.py  frontWeb.py  iiko_web.py  processing.py  server.py  transport.py  webAPI.py
doc/: Makefile
doc/source/: conf.py  index.rst
docs/: Makefile
docs/source/: Pyiiko.rst  conf.py  index.rst  modules.rst
test/: __init__.py  test.py  test_front.py  test_server.py  test_transport.py
tests/: conftest.py  test_iiko_web.py  test_server.py  test_transport.py
