[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pyiiko"
version = "0.3.0"
description = "Python library for iiko ERP API"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Gadzhibala Pirmagomedov", email = "gadzhibala@protonmail.com" }]
requires-python = ">=3.9"
keywords = ["iiko", "restaurant", "erp", "api", "horeca"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
    "lxml>=4.9.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/gadzhi/pyiiko"
Repository = "https://github.com/gadzhi/pyiiko"
Issues = "https://github.com/gadzhi/pyiiko/issues"
Changelog = "https://github.com/gadzhi/pyiiko/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["Pyiiko*"]

[tool.setuptools.package-data]
Pyiiko = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["Pyiiko"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
